# CF Form Submit Changelog

## 1.4
- Added ability to edit existing posts
- Adjusted css error class functions so that only the class name is returned, allowing other classes to be added to form fields. Old function name still works in the same way for backwards compatibility.

## 1.3.2
- code-steam lined and cleaned up

## 1.3.1
- fixed KSES filtering to account for Arrays properly

## 1.3
- added KSES filtering for security (fixed XSS vulnerability)

(what happened to 1.1 and 1.2?)

## 1.0.2
- fixed exposing file paths on error

## 1.0.1
- fixed error handling for missing required settings/plugins

## 1.0
- Initial release
- Allows forms to be processed.  Allowed and Required fields are set via a configuration file